Fix group panel not showing on large devices

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -221,7 +221,7 @@ td.feed-url-delete {
 }
 
 .birdfeed-tabs {
-  border-bottom: 1px solid hsl(200, 0%, 60%);
+  border-bottom: 2px solid hsl(200, 70%, 50%);
 }
 
 .birdfeed-tab {
